// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverlayAlertComponent matches snapshot when type is "approved" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--success"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <ApprovedAlert
        userName="user"
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "closed" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--closed"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <ClosedAlert />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "declined" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--closed"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <DeclinedAlert
        bureau="bureau"
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "handshake_declined" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--closed"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <HandshakeDeclinedAlert
        bureau="bureau"
        userName="user"
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "handshake_offered" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--pending"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <HandshakeOfferedAlert
        acceptBid={[Function]}
        declineBid={[Function]}
        id={1}
        userName="user"
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "in_panel" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--pending"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <InPanelAlert
        bureau="bureau"
        userName="user"
      />
    </div>
  </div>
</div>
`;
